---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM004
  severity: Critical
  message: "DETACH PARTITION on existing partitioned table 'measurements' without CONCURRENTLY acquires ACCESS EXCLUSIVE on the entire table, blocking all reads and writes. Use DETACH PARTITION ... CONCURRENTLY (PostgreSQL 14+)."
  file: repos/all-rules/migrations/V013__partition_violations.sql
  start_line: 2
  end_line: 2
